order rewamp style issues and alignment issues fixed

--- a/src/app/shared/modules/shopping-cart/order-consumer-checkout/order-consumer-checkout.component.scss
+++ b/src/app/shared/modules/shopping-cart/order-consumer-checkout/order-consumer-checkout.component.scss
@@ -326,9 +326,13 @@
   background-color: #183e7a !important;
 }
 
-::ng-deep .mat-radio-group {
-  margin-left: 6px !important;
-}
+// ::ng-deep .mat-radio-group {
+//   margin-left: 6px !important;
+// }
+
+// ::ng-deep .mat-vertical-content {
+//   padding: 0 !important;
+// }
 
 ::ng-deep .mat-radio-label-content {
   padding-left: 3px !important;
@@ -1041,9 +1045,10 @@ h3 {
   /* padding: 10px 160px !important; */
   padding-top: 15px !important;
   padding-bottom: 15px !important;
-  width: 95% !important;
-  margin: 10px !important;
+  width: 100% !important;
+  margin: 10px 0px !important;
   color: #fff !important;
+  transition: 0.3s;
 }
 
 .refund_policy {
@@ -1055,4 +1060,12 @@ h3 {
   color: #7e808c;
   font-weight: 400 !important;
   margin-bottom: 5px !important;
+}
+
+
+.cart-heading {
+  /* background-color: #1E4079 !important; */
+  color: #1E4079 !important;
+  font-weight: bold !important;
+  font-size: 18px !important;
 }
